style:delay to show button to prevent layout shift

--- a/src/features/my-best-songs/components/MyBestSongsAddModalButton/style.module.css
+++ b/src/features/my-best-songs/components/MyBestSongsAddModalButton/style.module.css
@@ -27,3 +27,19 @@
     background-color: var(--mantine-color-dark-8);
   }
 }
+
+.addButton {
+  /* Virtuosoがレンダリングされる前に表示されるとカクつくので遅らせている */
+  opacity: 0;
+  animation: fade-in 0.1s ease-out forwards;
+  animation-delay: 0.1s;
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+}
